Stage rundeck jar file

--- a/config/components.yml
+++ b/config/components.yml
@@ -16,14 +16,14 @@
 # Configuration for components to use in the buildpack
 ---
 containers:
-  - "JavaBuildpack::Container::DistZip"
-  - "JavaBuildpack::Container::Groovy"
+  # - "JavaBuildpack::Container::DistZip"
+  # - "JavaBuildpack::Container::Groovy"
   - "JavaBuildpack::Container::JavaMain"
-  - "JavaBuildpack::Container::PlayFramework"
-  - "JavaBuildpack::Container::Ratpack"
-  - "JavaBuildpack::Container::SpringBoot"
-  - "JavaBuildpack::Container::SpringBootCLI"
-  - "JavaBuildpack::Container::Tomcat"
+  # - "JavaBuildpack::Container::PlayFramework"
+  # - "JavaBuildpack::Container::Ratpack"
+  # - "JavaBuildpack::Container::SpringBoot"
+  # - "JavaBuildpack::Container::SpringBootCLI"
+  # - "JavaBuildpack::Container::Tomcat"
 
 # In order to use Oracle JREs instead of OpenJDK, you must comment out the OpenJDK line and uncomment the Oracle line.
 # Please see the documentation for more detail.
